2008-09-14  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* hppa-linux-tdep.c (hppa_dwarf_reg_to_regnum): Remove surrounding
	"#if 0" "#endif".  Fix mapping of DWARF DBX registers to GDB registers.
	Correct arguments and improve comments.
	(hppa_linux_init_abi): Call set_gdbarch_dwarf2_reg_to_regnum.  Delete
	disabled code.
	* hppa-tdep.c (hppa64_dwarf_reg_to_regnum): Fix check for floating
	point DBX register, change error to warning, and improve comments.

2008-09-14  Doug Evans  <dje@google.com>

	* dwarf2read.c (struct die_info): Make members tag, num_attrs 16 bits.

2008-09-14  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* hppa-linux-tdep.c (hppa_linux_supply_fpregset): Correct iteration.

2008-09-13  Joel Brobecker  <brobecker@adacore.com>

	* defs.h (GCC_GENERATED_STDINT_H): Define.

2008-09-13  Tom Tromey  <tromey@redhat.com>

	* varobj.c (varobj_set_display_format): Use xfree.
	* tracepoint.c (stringify_collection_list): Use xfree.
	* remote-fileio.c (remote_fileio_reset): Use xfree.
	* mipsread.c (read_alphacoff_dynamic_symtab): Use xfree.
	* dfp.c (decimal_from_floating): Use xfree, xstrprintf.  Don't use
	asprintf.
	* cp-support.c (mangled_name_to_comp): Use xfree.

2008-09-13  Joel Brobecker  <brobecker@adacore.com>

	* ada-lang.c (remove_extra_symbols): Remove stub symbols if
	the associated complete symbol is also in the list.
	(ada_add_local_symbols, ada_add_non_local_symbols): New functions,
	extracted out from ada_lookup_symbol_list.
	(ada_lookup_symbol_list): Use them.  Remove the search through
	the minimal symbols.

2008-09-13  Joel Brobecker  <brobecker@adacore.com>

        * dwarf2read.c (add_partial_subprogram): New procedure.
        (scan_partial_symbols): Use it.
        (load_partial_dies): Read in children of subprogram and lexical
        blocks for Ada compilation units.

2008-09-13  Tom Tromey  <tromey@redhat.com>

	* symfile.c (build_id_verify): Free 'found'.
	(find_separate_debug_file): Use xfree, not free.
